--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -24,7 +24,18 @@
 margin-right: 0px;
 }
 
+/* #tabsAndList{
+        margin-bottom: 10px;
+} */
 
+/* .listInSelect .MuiTab-wrapper ,
+ .tabsInSelect  .MuiTab-wrapper{
+   margin-bottom: -8px;
+}
+
+.listInSelect, .tabsInSelect{
+        border-bottom: 2px solid rgb(210, 200, 200) !important
+} */
 .MuiTab-root{
         min-width: 75px !important;
         /* color:'#00C6EA' !important; */
