--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -66,7 +66,7 @@ textarea:focus{
     display: inline;
 }
 .task-details > .form-group{
-    margin-bottom: 0.01rem !important;
+    /* margin-bottom: 0.5rem !important; */
   }
   .task-details > .dropdown{
 z-index: 9999 !important;  }
