--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -80,12 +80,16 @@
     text-align: right!important;
    
   }
-  .view-details-btn>button:hover{
-    background-color: #E8EAEC;
+  .view-details-btn>button{
     border-radius: 5px;
     margin-right: 1vh;
   padding-top: 0.5vh;
   padding-bottom: 0.5vh;
+
+  }
+  .view-details-btn>button:hover{
+    background-color: #E8EAEC;
+    
 
   }
   /* Style the checkmark/indicator */
@@ -147,7 +151,7 @@
 padding: 4px;
   }
  .col-add-task{
-   width: 5vw;
+   width: 4vw;
  }
   .status-task-done{
     background: var(--unnamed-color-fe4d97) 0% 0% no-repeat padding-box;
