--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -1,9 +1,8 @@
 .Workspacegrid{
-   cursor: pointer;;
+   cursor: pointer !important;
 
 /* color:black; */
 font-size: small;
-
       width: 7rem;
    background-color: #F6F6FA;
    height: 7.5rem;
@@ -16,7 +15,10 @@ font-size: small;
     
 }
 
-
+/* .iconsActions{
+   cursor: pointer !important;
+} */
+  
 .stripeToSavePlace{
    color:#ffffff00;
    margin-right: 0.2rem;
