--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -1,13 +1,27 @@
 .left_nav{
-  /* height: calc(100%-55px); */
-  height: 100vh;
-    background: #0A102E 0% 0% no-repeat padding-box;
-  border: 1px solid #707070;
-  /* border-radius: 0px 80px 0px 0px; */
-
   
-  /* overflow-y: hidden !important; */
-  }
+  height: 100vh;
+  background: #0A102E 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  animation: openConfigurator 1s ;
+  /* width: 0% ; */
+  /* animation-direction: alternate-reverse; */
+}
+
+@keyframes openConfigurator {
+  0%   {width: 0%; }
+ 100%   {width: 100%; }
+}
+.closeConfigurator1{
+  animation: closeConfigurator 2s ;
+
+}
+@keyframes closeConfigurator {
+  0%   {width: 100%; }
+ 99%   {width: 0%; }
+ 100%{display: none !important}
+}
+
 .left_nav li{
   color: #FFFFFF;
 }
@@ -41,7 +55,30 @@ border-radius: 3px;
      padding-left: 10px;
      /* border-left: 16px solid #44D7B6 !important;‏ */
 }
-     li:focus{
+
+.list_config li{
+  overflow: auto;
+}
+
+
+.closeConfigurator{
+     padding-left: 29px;
+     position: absolute;
+     width: 62px;
+     height: 24px;
+     margin-top: -34px;
+     z-index: 99999;
+ }
+
+ @-webkit-keyframes slide-in {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+   .list_config  li:focus{
     background-color:white;
   }
   li p{
