--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -15,6 +15,9 @@ overflow-y: auto;
     overflow-y: auto;
 
 }
+.menu__ .form-control{
+  height: calc(1.3em + .75rem ) !important;
+}
 .d-status{
     /* display: inline-block; */
 }
@@ -75,14 +78,10 @@ z-index: 9999 !important;  }
 }
 .color-status-first{
     width: 26px;
-height: 10px;
-background: var(--unnamed-color-f13b7f) 0% 0% no-repeat padding-box;
-background: #F13B7F 0% 0% no-repeat padding-box;
-border-radius: 5px;
-opacity: 1;
-/* margin-top:1.5vh; */
-/* vertical-align: middle; */
-/* display: inline; */
+    height: 10px;
+    border-radius: 5px;
+    opacity: 1;
+
 }
 .placehlder-first-status{
     /* display: inline-block; */
