--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -30,6 +30,12 @@
   border:1px #778CA2 dashed ;
 
 }
+.logoGif{
+  /* margin-top: -5vh; */
+  margin-left: auto !important;
+  width: 10vh !important;
+  height: 5vh !important;
+}
  
   
   
