--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -42,7 +42,10 @@
     background-color: transparent;
     border: none !important;
     outline: 0!important;
-    width: max-content !important;
+    /* -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    display: -webkit-box; */
 }
 .title-card{
     display: inline !important;
@@ -56,6 +59,7 @@
     padding-bottom: 1.5px;
     border-radius: 3px;
     border:1px  solid #00C1C9!important;
+
     /* border-radius: 2px !important; */
     /* border: 1px solid blue; */
 }
