--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -6,7 +6,7 @@
 background-color: white;
 width: 140%;
 box-shadow: 0px 0px 10px #00000034;
-overflow-y: auto;
+overflow-x: auto;
 
 }
 
@@ -15,12 +15,16 @@ overflow-y: auto;
 }
 .status-list{
     margin-top: 1vh;
-    max-height: 109px;
+    max-height: 150px;
     overflow-y: auto;
 
 }
 .menu__ .form-control{
-  height: calc(1.3em + .75rem ) !important;
+  height: calc(1.1em + .75rem ) !important;
+}
+.menu__  label{
+  margin-top:3px;
+  font-size: 11px !important;
 }
 .d-status{
     /* display: inline-block; */
@@ -29,15 +33,14 @@ overflow-y: auto;
     margin-top: 55px;
 }
 .create-label{
-    margin-top: 1vh;
-    margin-bottom: 5vh;
-
-    width: 150px;
-    /* background: var(--unnamed-color-75798e) 0% 0% no-repeat padding-box; */
-/* background: #75798E 0% 0% no-repeat padding-box; */
+  background: var(--unnamed-color-75798e) 0% 0% no-repeat padding-box;
+background: #75798E 0% 0% no-repeat padding-box;
 border: 1px solid #707070;
-opacity: 0.5;
-border-top: 1px solid #707070;
+opacity: 0.15;
+    margin-top: 1vh;
+    margin-bottom: 3vh;
+/* opacity: 0.5; */
+/* border-top: 1px solid #707070; */
 }
 #milestones{
     border-radius: 5px;
@@ -73,7 +76,7 @@ textarea:focus{
     display: inline;
 }
 .task-details{
-  /* overflow-x: auto; */
+  overflow-y: auto !important;
 }
 .task-details > .form-group{
     /* margin-bottom: 0.5rem !important; */
