change func to getAllStatusesTaskForWorkspace

--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -25,6 +25,9 @@ margin-top: 1vh;
 {
     box-shadow: none !important;
 }
+.edit-status-wraps{
+    display: block;
+}
 .title-edit-label{
     cursor: pointer;
     color: var(--unnamed-color-3598f4);
