--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -13,6 +13,7 @@ font-size: small;
    align-items: center;
    border-radius: 10px;
    margin-right: 1rem;
+   padding:10px;
     
 }
 
@@ -67,7 +68,7 @@ font-size: small;
    /* text-align: 30px; */
    font-family: 'Roboto', sans-serif;
    font-size: 1.8rem;
-   margin-top:9px;
+   /* margin-top:9px; */
 }
 /* .close{
    cursor: pointer;
