--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -23,3 +23,14 @@ margin-right: 1.8rem !important;
 .errorNameEmpty{
     border-bottom: 1px solid red !important;
 }
+
+.propertiesViewDitails{
+    max-height: 79vh;
+    height: 79vh;
+    overflow: auto;
+    padding-bottom: 0px !important;
+}
+
+.ditailsAction{
+   margin-bottom: 0px
+}
