--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -24,6 +24,10 @@
   .check-task:nth-child(3){
     text-align: right !important;
   }
+  .disabled{
+  color:gray ;
+  opacity: 0.5;
+  }
   .check-task{
     font-size: 14px;
     margin-bottom: 0px !important;
