--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -67,9 +67,9 @@ opacity: 0.9;
 .menu__{
    
 background-color: white;
-width: 140%;
+width: 110%;
 box-shadow: 0px 0px 10px #00000034;
-overflow-x: auto;
+overflow-y: auto;
 
 }
 
