--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -4,9 +4,9 @@
 .menu__{
    
 background-color: white;
-width: 140%;
+/* width: 120%; */
 box-shadow: 0px 0px 10px #00000034;
-overflow-x: auto;
+overflow-y: auto;
 
 }
 
@@ -107,11 +107,15 @@ z-index: 9999 !important;
     float:right !important;
     
      /* margin-bottom: 1.5vh !; */
-}.switch {
+}
+.milestones-span{
+  font-size:15px;
+}
+.switch {
     position: relative;
     display: inline-block;
-    width: 40px;
-    height: 22px;
+    width: 36px;
+    height: 19px;
   }
   
   .switch input { 
@@ -135,10 +139,10 @@ z-index: 9999 !important;
   .slider:before {
     position: absolute;
     content: "";
-    height: 16px;
-    width: 16px;
-    left: 3px;
-    bottom: 3px;
+    height: 14px;
+    width: 14px;
+    left: 4px;
+    bottom: 2.3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
