share-add-members-team-to-share-list-view

--- a/src/component/hub/project/shareProject/shareProject.css
+++ b/src/component/hub/project/shareProject/shareProject.css
@@ -4,6 +4,7 @@ height: 35vh;
 background: #eaf8f2 0% 0% no-repeat padding-box;
 border-radius: 3px;
 /* opacity: 0.11; */
+overflow-x: hidden;
 }
 .txt_share{
     font: bold 16px/21px Roboto;
