--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -72,6 +72,7 @@ border-radius: 3px;
      height: 24px;
      margin-top: -34px;
      z-index: 99999;
+     cursor: pointer;
  }
 
  /* @-webkit-keyframes slide-in {
