--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 .view-cards-tabs .card-body{
     height:  55vh; /* בינתיים */
-    background: transparent linear-gradient(360deg, #55FFCB00 0%, #cdfff2 100%) 0% 0% no-repeat padding-box;
+    background: transparent linear-gradient(360deg, #87C5FE30 0%, #cdfff2 100%) 0% 0% no-repeat padding-box;
+   /* background-color: #87C5FE30; */
     border-radius: 0px 0px 8px 8px;
     text-align: left;
     letter-spacing: 0px;
