--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -2,7 +2,7 @@
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border-radius: 12px;
   opacity: 1;
-  overflow: auto;
+  /* overflow: auto; */
   overflow-x: hidden;
   overflow-y: auto!important;
 }
