design input search task

--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -36,6 +36,8 @@
     height: auto;
     overflow: auto;
     min-height:84px ;
+    width: 97%;
+    margin-left: 2%;
   }
 
   .title-view-details{
