--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -70,6 +70,8 @@ font-size: small;
    font-size: 1.6rem;
    /* margin-top:9px; */
 }
+#sevaNewWorkspace{
+}
 /* .close{
    cursor: pointer;
 } */
