--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -8,6 +8,14 @@
 
 
   }
+  @media screen and (min-width: 1600px) {
+    .body {
+      height: 83vh;
+    }
+    .card{
+      height:75vh !important;
+    }
+  }
   .cards{
     height: 65vh;
     /* overflow-y: auto; */
