--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -70,7 +70,8 @@ background-color: white;
 /* width: 110%; */
 box-shadow: 0px 0px 10px #00000034;
 overflow-y: auto;
-
+z-index: 9999999;
+    position: fixed;
 }
 
 .divStatus{
