--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -180,5 +180,5 @@ z-index: 9999 !important;
     overflow: auto;
     min-height: 16vh;
     width: 97%;
-    margin-left: 2%;
+    /* margin-left: 2%; */
   }
