--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -54,6 +54,7 @@
     background-color: white;
     height: 100px;
     border-radius: 5px;
+    position: relative !important;
 }
 .task-card p{
     color:black !important;
