--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -54,7 +54,6 @@
   }
   .checkmark-tabs{
     right: 10% !important;
-    z-index: 9999;
   }
   .checkmark-place{
     top: 7px;
@@ -162,8 +161,21 @@
 padding: 4px;
   }
  .col-add-task{
-   width: 4vw;
+   width: 2vw;
  }
+ .check-task .css-yk16xz-control{
+border: none !important;
+ }
+ .check-task.css-yk16xz-control :active{
+   border: none !important;
+ }
+ .check-task.css-yk16xz-control :focus{
+  border: none !important;
+ }
+ .check-task .css-2b097c-container{
+   /* display: none !important; */
+}
+
   .status-task-done{
     background: var(--unnamed-color-fe4d97) 0% 0% no-repeat padding-box;
     background:#D9F7F0 0% 0% no-repeat padding-box;
