--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -38,6 +38,11 @@ margin-right: 1.8rem !important;
     padding-bottom: 0px !important;
 }
 
+.propertiesViewDitails .headerDitails{
+  border-bottom: 1px solid #707070
+
+}
+
 .ditailsAction{
    margin-bottom: 0px
 }
