delete and modal delete

--- a/src/component/hub/shureDelete/shureDelete.css
+++ b/src/component/hub/shureDelete/shureDelete.css
@@ -32,3 +32,7 @@
 .borderTop  .modal-dialog  .modal-content .modal-body{
     text-align: center;
 }
+
+.displayNone{
+    display: none !important;
+}
