--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -36,7 +36,6 @@ margin-right: 0px;
  .tabsInSelect  .MuiTab-wrapper{
    margin-bottom: -8px;
 }
-
 .listInSelect, .tabsInSelect{
         border-bottom: 2px solid rgb(210, 200, 200) !important
 } */
@@ -51,6 +50,14 @@ background-attachment: '#00C6EA' !important;
 line-height: 0.95 !important;
 text-transform: none !important;
 
+}
+.circle-color-project{
+border-radius:50%;     
+        /* margin-right:3px; */
+        height: 10px;
+        width: 10px;
+}
+.select-name-project{
 }
 
 .MuiTab-root:focus{
