--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -68,7 +68,8 @@
    
     text-align: center;
 }
-p{ color:#98A9BC !important;
+p{ 
+    color:#98A9BC !important;
     margin-bottom: 0 !important;
     
 }
