--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -13,6 +13,39 @@
     margin-top: 1%;
 }
 
+.logo-w-little {
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    font-size: 14px;
+    color: white;
+    letter-spacing: 1.72px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.3rem;
+    margin-right: 6px;
+    margin-left:8px;
+    display: inline-block !important;
+}
+.saveSelect{
+    background-color: #C4CCD5 !important;
+    color: white !important;
+    border-radius: 19px;
+    padding: 5px;
+    letter-spacing: 0px;
+    padding-left: 11px;
+    padding-right: 11px;
+    height: fit-content;
+    display: none;
+}
+
+#buttonCancleSelect{
+    display: none;
+}
+
+#selectProjectInAllTask{
+    display: none;
+}
+
 .divText{
     font-weight: bolder;
     text-align: left;
