share contact in task

--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -82,7 +82,7 @@
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #44D7B6; 
+    /* background: #44D7B6;  */
   }
   .color-task{
     width: 60px;
