--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -7,10 +7,27 @@
     margin-top: 2px;
 }
 
-.input-group-task-not-belongs{
-     margin: 3%; 
+.input-group-task-not-belongs1{
+     /* margin: 3%; 
      margin-bottom: 1%;
-     margin-left: 2%;
+     margin-left: 2%; */
+     z-index: 9999;
+    position: fixed;
+    background: white;
+    overflow: hidden;
+    width: 81vw;
+    margin-left: 2vh;
+    padding-left: 0px;
+    height: 20vh;
+    min-height: 112px !important;
+
+}
+
+.input-group-task-not-belongs{
+    width: 100%;
+    margin: 3%; 
+    margin-bottom: 1%;
+    margin-left: 2%;
 }
 /* 
 .selectWorkspaceInTasksNotBelong,
@@ -125,7 +142,7 @@
 
 
 #buttonCancleSelect{
-    display: none;
+    /* display: none; */
 }
 
 #selectProjectInAllTask{
@@ -161,8 +178,12 @@ padding-left: 59px;
 
 .headerTableTask{
     background: #3598f41c 0% 0% no-repeat padding-box !important;
+    width: 100%;
 }
 
+.allTasks{
+    margin-top:21vh !important;
+}
 
 .labelAllTask{
     font-weight: bolder;
