--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -34,7 +34,8 @@ margin-right: 1.8rem !important;
 .propertiesViewDitails{
     max-height: 79vh;
     height: 79vh;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden !important;
     padding-bottom: 0px !important;
 }
 
