--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -1,5 +1,5 @@
 .addTaskNotBelong{
-    border:1px solid #3598F4;
+    border:1px solid #1FB9C1;
     border-radius: 8px !important;    
     margin-right: 10px;
      padding-right: 32px;
@@ -8,10 +8,8 @@
 }
 
 .input-group-task-not-belongs1{
-     /* margin: 3%; 
-     margin-bottom: 1%;
-     margin-left: 2%; */
-     z-index: 9999;
+
+     /* z-index: 9999;
     position: fixed;
     background: white;
     overflow: hidden;
@@ -19,7 +17,7 @@
     margin-left: 2vh;
     padding-left: 0px;
     height: 20vh;
-    min-height: 112px !important;
+    min-height: 112px !important; */
 
 }
 
@@ -27,7 +25,8 @@
     width: 100%;
     margin: 3%; 
     margin-bottom: 1%;
-    margin-left: 2%;
+    margin-left: 0px;
+    margin-right: 0px
 }
 /* 
 .selectWorkspaceInTasksNotBelong,
@@ -103,7 +102,7 @@
 }
 
 .saveSelectActive{
-    background-color: #3598F4 !important;
+    background-color: #68C7CB !important;
     border-radius: 19px;
     color:white !important;
     padding: 5px;
@@ -171,20 +170,25 @@
 text-align: left;
 font: normal normal bold 14px/19px Roboto;
 letter-spacing: 0px;
-color: #87C5FE;
+color: #68C7CB;
 text-transform: capitalize;
 padding-left: 59px;
 }
 
 .headerTableTask{
-    background: #3598f41c 0% 0% no-repeat padding-box !important;
+    background: #68c7cb1a  0% 0% no-repeat padding-box !important;
     width: 100%;
 }
 
 .allTasks{
-    margin-top:21vh !important;
+    /* margin-top:21vh !important; */
 }
-
+.nameTaskNotBelong{
+    text-align: left !important;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
 .labelAllTask{
     font-weight: bolder;
     text-align: left;
