--- a/src/component/hub/uploadFile/uploadFile.css
+++ b/src/component/hub/uploadFile/uploadFile.css
@@ -1,3 +1,17 @@
 .divFile{
     display: inline-block !important;
 }
+.uploadFileNew{
+    color: #68C7CB;
+    height: 15px;
+ }
+
+ .spanUploadFileNew{
+    display: inline-block;
+    background-color: #68c7cb1a;
+    border-radius: 5px;
+    width: 36px;
+    height: 38px;
+    text-align: center;
+    padding-top: 10px;
+ }
