--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -1,15 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 .view-cards-tabs .card-body{
-    height:  55vh; /* בינתיים */
-    background: transparent linear-gradient(360deg, #87C5FE30 0%, #ebfff8 100%) 0% 0% no-repeat padding-box;
-   /* background-color: #87C5FE30; */
+     max-height:  70vh;/* בינתיים */
+    /* background: transparent linear-gradient(360deg, #87C5FE30 0%, #ebfff8 100%) 0% 0% no-repeat padding-box; */
+    background-color:#EDFBFC !important ;
     border-radius: 0px 0px 8px 8px;
     text-align: left;
     letter-spacing: 0px;
     color: #0A102E;
-    overflow-y: auto;
+    overflow-y: auto;  
 
-   
+}
+.card-width{
+  width: 35vh !important;
+  display: inline-block !important; 
+}
+.card-body {
+  padding: 1rem !important;
+  /* padding-top: 0.5 !important; */
+}
+#add-new-card{
+  background-color:  #EDFBFC  !important;
+
+}
+#input-card-name{
+  font-size: medium;
+  font-weight: bold !important;
+  background-color:  #EDFBFC  !important;
 }
 .more {
   right: 6px;
@@ -17,12 +33,13 @@
   min-width: min-content !important;
 }
 .view-cards-tabs .card-header{
-    background-color: white !important;
+    background-color: #EDFBFC !important;
     font-size: 16px;
     font-weight: 500;
 }
 .card-header{
   padding: 4px !important;
+  border-bottom: none;
 }
 .more{
     background-color: transparent;
