--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -10,6 +10,7 @@ right: 0;
 z-index: 999;
 border-left: 9px solid  #329A80  ;
 margin-right: 1.8rem !important;
+overflow-x: hidden !important;
 }
 @media screen and (min-width: 1550px) {
   
@@ -32,8 +33,8 @@ margin-right: 1.8rem !important;
 }
 
 .propertiesViewDitails{
-    max-height: 79vh;
-    height: 79vh;
+    max-height: 74vh;
+    height: 74vh;
     overflow: auto;
     padding-bottom: 0px !important;
 }
