--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -78,16 +78,13 @@ p{
     background-color: transparent;
      outline: 0 !important;
     border: none !important;
-<<<<<<< HEAD
     opacity: 0.5;
     display: none;
-=======
-    display: inline-block !important; ;
+    /* display: inline-block !important; ; */
 
 }
 .new-task{
-    display: block;
->>>>>>> newDev
+    /* display: block; */
 }
 
 .new-task:focus{
