design tabs and task details

--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -26,7 +26,7 @@
 }
 .more{
     background-color: transparent;
-    float: right !important;
+    /* float: right !important; */
     color:#778ca2;
     /* margin-top: 1px; */
 }
@@ -44,6 +44,9 @@
     font-size: 15px !important;
 }
 .allTaskInCard div{
+  /* padding-right: 5px !important;
+  padding-left: 5px !important; */
+
   margin-bottom: 9px;
 }
 
@@ -51,10 +54,17 @@
   color:black  !important;
 }
 .task-card{
+  padding-top: 5px !important;
     background-color: white;
-    height: 100px;
+    height: 105px;
     border-radius: 5px;
     position: relative !important;
+}
+.task-card input{
+  height: 55px !important;
+  float: left !important;
+  margin:0 !important;
+
 }
 .task-card p{
     color:black !important;
@@ -90,17 +100,35 @@
     /* background-color:#F8B520; */
     border-radius: 4px;
     opacity: 1;
+    margin-right: 10px;
+    margin-top: 3vh;
+
 
 }
+.assing-icon{
+  display: none;
+
+  
+}
+.task-card:hover .assing-icon {
+}​
+.task-card:hover .color-task {
+}​
+/* .color-task:hover{
+  display: none;
+} */
 .card-header .form-control, .task-card .form-control
 {
   color:black !important;
     border:none !important;
+    outline: 0 !important;
     /* width:70%; */
 
 }
 .card-header .form-control{
   font-weight: 500 !important;
+  border:none !important;
+    outline: 0 !important;
 }
 .card-header .form-control:focus
 {
