--- a/src/component/hub/project/shareProject/shareProject.css
+++ b/src/component/hub/project/shareProject/shareProject.css
@@ -5,6 +5,10 @@ background: #eaf8f2 0% 0% no-repeat padding-box;
 border-radius: 3px;
 /* opacity: 0.11; */
 overflow-x: hidden;
+/* position: relative; */
+/* z-index: 0; */
+/* top: 0;
+left: 0; */
 }
 .txt_share{
     font: bold 16px/21px Roboto;
